# project2_priezzhikh_timofey_M25-555

./: .gitignore  README.md  db_meta.json  makefile  pyproject.toml
data/: table1.json
src/primitive_db/: constants.py  core.py  decorators.py  engine.py  main.py  utils.py
